Fix image overlap

--- a/source/assets/styles/main.css
+++ b/source/assets/styles/main.css
@@ -186,7 +186,8 @@ section.gallery-section > h1 {
 }
 
 #gallery-container a {
-    margin: 2.5em;
+    margin: 0%;
+    padding: 2.5em;
 }
 
 #gallery-container img
@@ -195,7 +196,8 @@ section.gallery-section > h1 {
     min-width: 33vh;
     max-width: 100vh;
     max-height: 100vh;
-    padding: auto;
+    margin: 0px;
+    padding: 0%;
     vertical-align: middle;
     border-radius: 50px;
     background: url("./assets/images/no-image.png") no-repeat scroll 0 0 transparent;
